# FirstAi-Perceptron

./: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp  matplotlibcpp.h
AILibrary/Dataset/: Data.cpp  Data.h  (+6 more)
Dossier/: ProjetRNA_Paque_Bourge.md
Perceptron/: Model.cpp  Model.h  PerceptronV1Model.cpp  PerceptronV1Model.h  PerceptronV2Model.cpp  PerceptronV2Model.h  PerceptronV3Model.cpp  PerceptronV3Model.h
SavedModel/: ADA_Classification2ClassesNonLineairementSeparableTable4_12_10.csv  ADA_Classification3ClassesNonLineairementSeparableTable4_14_10.csv  ADA_Classification3ClassesTable2_11.csv  ADA_Classification3ClassesTable3_1.csv  ADA_ClassificationDonneeLineaireTable2_9.csv  ADA_ClassificationDonneeNonLineairementSeparableTable2_10.csv  ADA_Nand.csv  ADA_Nor.csv  ADA_RegressionLineaireTable2_11.csv  ADA_taille_poids.csv  DG_Classification3ClassesTable2_11.csv  DG_ClassificationDonneeLineaireTable2_9.csv  DG_ClassificationDonneeNonLineairementSeparableTable2_10.csv  DG_Nor.csv  DG_OperateurLogiqueXORTable4_3.csv  DG_OperateurLogiqueXORTable4_3_2.csv  DG_OperateurLogiqueXORTable4_3_3.csv  DG_RegressionLineaireTable2_11.csv  DG_RegressionNonLineaireTable4_171.csv  DG_RegressionNonLineaireTable4_1710.csv  DG_RegressionNonLineaireTable4_174.csv  DG_RegressionNonLineaireTable4_17_5.csv  DG_taille_poids.csv  P_Nor.csv  operateurLogiqueETTable2_1.csv  operateurLogiqueETTable2_3.csv  operateurLogiqueTable2_1.csv
datasetTest/: datasetAndDoor.csv  datasetAndDoorV2.csv  datasetOrDoor.csv  datasetOrDoorV2.csv  table_1_iteration.csv  table_nand.csv  table_nor.csv  taile_poids.csv
(+35 files in other folders)
